# PokeCraft

./: .gitignore  .mcp.json  AICraft.md  AICraft_UserWorkflow1.md  AUTONOMOUS_DEV_SESSION_SUMMARY.md  COMPLETION_REPORT.md  COMPLETION_SUMMARY.txt  CONTRIBUTING.md  EXTENDED_IMPLEMENTATION_REPORT.md  FINAL_SUMMARY.txt  FIXES_SUMMARY.md  HANDOFF.md  IMPLEMENTATION_VERIFICATION.md  INSTALLATION.md  LAUNCH_PROTOTYPES.md  PHASE2_COMPLETION_REPORT.md  PROGRESS_SUMMARY.md  PROTOTYPE_FIXES.md  QUICKSTART.md  README.md  REFACTORING_COMPLETE.md  ROUNDS_15_18_STATUS.txt  ROUNDS_15_18_VERIFICATION.md  ROUNDS_19_22_FINAL_REPORT.md  TASK_COMPLETE.txt  TASK_COMPLETE_FINAL.txt  TASK_COMPLETION_SUMMARY.md  VERIFICATION_REPORT.md  VERIFICATION_REPORT_26_ROUNDS.md  VERIFICATION_REPORT_ROUNDS_27_30.md  VERIFICATION_REPORT_ROUNDS_31_34.md  VERIFICATION_REPORT_ROUNDS_35_38.md  VERIFICATION_REPORT_ROUNDS_39_42.md  VISUALIZATION_DESIGN.md  agent_communication.py  agent_core.py  agent_deployment.py  agent_execution.py  agent_memory.py  agent_persistence.py  (+101 more)
.annotations/: .mcp.json.json  TDD.md.json  auto_remind_designer.py.json  continue.txt.json  iterate_project.py.json  iterate_project_hourly.py.json
.claude/: CLAUDE.md  orchestra.md  settings.json
.claude_files/: UI_FLOW.md  implementation_summary.md  (+1 more)
.quibbler/: rules.md
backend/: .env.example  COMPLETION_REPORT_FINAL.md  INSTALLATION.md  TROUBLESHOOTING.md  agents.db  fix_agent_deployer.py  fix_indent_final.py  fix_indent_proper.py  fix_indentation.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_env_setup.py  test_fastmcp_deployment.py  test_fastmcp_simple.py  test_xml_parser_standalone.py
backend/.claude_files/: deployment_verification_summary.md
backend/src/: action_registry.py  agent_deployer.py  agent_deployer.py.backup  agent_service.py  avatar_generator.py  config.py  database.py  game_engine.py  game_tools_mcp_server.py  llm_client.py  llm_world_generator.py  logging_config.py  main.py  mcp_server_runtime.py  state_manager.py  test_mcp_server.py  tool_generator.py  tool_registry.py  tool_service.py  tools.py  world_service.py
backend/src/agent/: __init__.py
backend/src/api/: main.py
backend/src/environment/: __init__.py
backend/src/evals/: __init__.py  pokemon_personality_eval.py
backend/src/models/: __init__.py  agent.py  db_models.py  environment.py  game_actions.py  tool.py  world.py
backend/static/: compare_avatars.html  new_style_demo.html  pokemon_comparison.html
backend/tests/: __init__.py  conftest.py  test_database.db  test_mcp_runtime.py
backend/tests/e2e/: test_complete_deployment_flow.py  test_deployment_ui_flow.py
backend/tests/integration/: test_actions_endpoint.py  test_agent_deployment.py  test_agent_deployment_version_fix.py  test_api.py  test_context_aware_tools.py  test_lifespan.py  test_static_serving.py  test_tool_api.py  test_world_endpoints.py
backend/tests/manual/: README.md  test_avatar_progress.py  test_world_bug_auto.py
backend/tests/unit/: conftest.py  test_action_registry.py  test_agent_db_model.py  test_agent_deployer.py  test_agent_export.py  test_agent_service.py  test_avatar_generator.py  test_avatar_streaming.py  test_config.py  test_debug_deployment.py  test_default_worlds.py  test_deployment_endpoint.py  test_game_actions.py  test_game_engine.py  test_llm_client.py  test_llm_streaming.py  test_llm_world_generator.py  test_mflux_progress_parsing.py  test_pokemon_personality_eval.py  test_tool_action_validation.py  test_tool_db_model.py  test_tool_generation_world_context.py  test_tool_generator.py  test_tool_registry.py  test_tool_service.py  test_world_service.py
(+222 files in other folders)
